Added recent publications.

--- a/resume.tex
+++ b/resume.tex
@@ -322,9 +322,12 @@ Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 %\vspace{0.1in}
 
 \section{Conference\\Publications} \begin{bibsection}
+    \item \href{https://arxiv.org/abs/1805.10368}{Fromm J, Patel S, Phillipose M. Heterogeneous Bitwidth Binarization in Convolutional Neural Networks. In: NIPS, 2018.}
+    \item {Saba E, Fromm J, Jiayao C, Patel S. TB or not TB: Cough Detection and Tuberculosis Classification for Pulmonary Health Estimation. In: IMWUT, 2018.}
+    \item \href{https://ieeexplore.ieee.org/document/8462127/}{Hwan Ko J, Fromm J, Phillipose M, Tashev I, Zarar S. Liming Numerical Precision of Neural Networks to Achieve Real-Time Voice Activity Detection. In: ICASSP, 2018.}
     \item \href{http://www.jwfromm.com/documents/paperid.pdf}{Li H, Brockmeyer E, Carter E, Fromm J, Hudson S, Patel S, Sample A. PaperID: A Technique for Drawing Functional Battery-Free Wireless Interfaces on Paper. In: CHI, 2016.}
     \item \href{http://www.jwfromm.com/documents/spirocall.pdf}{Goel M, Saba E, Stiber M, Whitmire E, Fromm J, Larson E, Borriello G, Patel S. SpiroCall: Measuring Lung Function over a Phone Call. In: CHI, 2016.}
-    \item \href{http://jwfromm.com/documents/BioSleeve_ICRA.pdf}{Wolf M, Assad C, Vernacchia M, Fromm J, Jethani H. Gesture-Based Robot Control with Variable Autonomy from the JPL BioSleeve. In: IEEE Conference on Robotics and Automation (ICRA), 2013. Oral}.
+    \item \href{http://jwfromm.com/documents/BioSleeve_ICRA.pdf}{Wolf M, Assad C, Vernacchia M, Fromm J, Jethani H. Gesture-Based Robot Control with Variable Autonomy from the JPL BioSleeve. In: IEEE Conference on Robotics and Automation (ICRA), 2013.}.
 \end{bibsection}
 
 \iffalse
