Updated experience section to longest version

--- a/resume.tex
+++ b/resume.tex
@@ -278,11 +278,27 @@ Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 	\begin{innerlist}
 		\item[] \href{https://ubicomplab.cs.washington.edu/}{UbiComp Lab} \hfill \textbf{Research Assistant}
 	\begin{innerlist}
-	        \item[] \emph{Researching novel ways to use sensing and embedded systems for medical purposes and human machine interaction. Specific current projects involve through body power transfer for battery-free onbody health sensors, enabling passive 3d interaction around smartphones through capacitive sensing driven by NFC, and screening for osteoporosis on a smartphone.}
+	        \item[] \emph{Researching novel applications and architectures for deep neural networks, with an emphasis on high performance computer vision systems.}
 	    \end{innerlist}
 	\end{innerlist}
 	
-\textbf{\href{http://research.microsoft.com/}{Microsoft Research}}\hfill \textbf{2013 and 2014}
+\textbf{\href{https://nest.com/}{Google Nest}}\hfill \textbf{2018}
+	\begin{innerlist}
+		\item[] \href{https://ai.google/research/teams/brain}{Nest Brain Team} \hfill \textbf{Research Intern}
+	\begin{innerlist}
+	        \item[] \emph{Developed novel generative adversarial network training techniques to enable realistic colorization of IR images captured by Nest Cams.}
+	    \end{innerlist}
+	\end{innerlist}
+
+\textbf{\href{http://research.microsoft.com/}{Microsoft Research Cambridge}}\hfill \textbf{2016 and 2017}
+	\begin{innerlist}
+		\item[] \href{https://www.microsoft.com/en-us/research/project/machine-learning-edge/}{Machine Learning on the Edge Group} \hfill \textbf{Research Intern}
+	\begin{innerlist}
+	        \item[] \emph{Explored neural network binarization as a method for enabling deep convolutional neural network inference on Raspberry Pi class devices. Developed novel binarization algorithms to allow fine-grained tuning of speed and accuracy tradeoff.}
+	    \end{innerlist}
+	\end{innerlist}
+
+\textbf{\href{http://research.microsoft.com/}{Microsoft Research Cambridge}}\hfill \textbf{2015}
 	\begin{innerlist}
 		\item[] \href{http://research.microsoft.com/en-us/groups/sendev/default.aspx}{Sensors and Devices Team} \hfill \textbf{Research Intern}
 	\begin{innerlist}
