Shortened to 1 page

--- a/resume.tex
+++ b/resume.tex
@@ -248,8 +248,8 @@
 \newlength{\rcollength}\setlength{\rcollength}{2.5in}%
 %
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
-2211 NE 50th Street Apt 8	& \textit{Mobile:} +1-626-676-2684 \\
-Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: }\href{http://www.jwfromm.com}{jwfromm.com}\\
+2510B NE 65th St	& \textit{Mobile:} +1-626-676-2684 \\
+Seattle, WA 98115 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: }\href{http://www.jwfromm.com}{jwfromm.com}\\
 
 \end{tabular}
 
@@ -265,11 +265,11 @@ Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 %
 \href{http://www.uw.edu/}{\textbf{University of Washington}}, Seattle, WA
 \begin{innerlist}
-\item[] Pursuing a Ph.D in Electrical Engineering as part of the UbiComp Lab.\hfill\textbf{2014 - 2019}\\ Focusing on developing novel hardware solutions to problems ranging\\ from interaction to implanted health sensing.
+\item[] Pursuing a Ph.D in Electrical Engineering as part of the UbiComp Lab.\hfill\textbf{2014 - 2019}.
 \end{innerlist}
 \href{http://www.caltech.edu/}{\textbf{California Institute of Technology}}, Pasadena, CA
 \begin{innerlist}
-\item[] Bachelor of Science with Honors in Electrical Engineering \hfill \textbf{June 2014} \\ with a Minor in Computer Science. \\Emphasis on embedded system and low level software development \\along with VLSI and FPGA systems.
+\item[] Bachelor of Science with Honors in Electrical Engineering \hfill \textbf{June 2014} \\ with a Minor in Computer Science.
 \end{innerlist}
 
 \section{Experience}
@@ -302,7 +302,7 @@ Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 	\begin{innerlist}
 		\item[] \href{http://research.microsoft.com/en-us/groups/sendev/default.aspx}{Sensors and Devices Team} \hfill \textbf{Research Intern}
 	\begin{innerlist}
-	        \item[] \emph{Worked as a member of the NEXT initiative developing novel interaction technology with a focus on producing high impact results in a real product. My contribution involved low level system development along with exploratory power harvesting research and design.}
+            \item[] \emph{Developed RF power harvesting techniques and hardware as part of the NEXT initiative to create novel interaction technology.}
 	    \end{innerlist}
 	\end{innerlist}
 	
@@ -310,27 +310,17 @@ Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 	\begin{innerlist}
 		\item[] \href{http://www.geforce.com/hardware}{GPU Verification Division} \hfill \textbf{ASIC Engineer}
 	\begin{innerlist}
-	        \item[] \emph{Verified that streaming multiprocessor operation in RTL matched simulated outputs using a C++ model. Also developed a software framework that allows increased automation in bug detection and filing.}
+	        \item[] \emph{Verified that streaming multiprocessor operation in RTL matched simulated outputs using a C++ model.}
 	    \end{innerlist}
 	\end{innerlist}
+
 \textbf{\href{http://www.jpl.nasa.gov/}{NASA Jet Propulsion Laboratory}}
 	\begin{innerlist}
 		\item[] \href{https://www-robotics.jpl.nasa.gov/}{Chris Assad Lab, Robotics Division} \hfill \hfill \textbf{SURF Fellow 2012}
 	    \begin{innerlist}
-	        \item[] \emph{Designed and developed the hardware and software of a system that uses an array of EMG electrodes to monitor muscle activity in a user's arm, classify the raw data using support vector algorithms, and control any of several robotic interfaces using simple trained gestures.}
-	    \end{innerlist}
-        \item[] \href{https://www-robotics.jpl.nasa.gov/}{Continued Work in Robotics Division} \hfill \textbf{Independent Researcher 2013}
-        \begin{innerlist}
-	        \item[] \emph{Developed an embedded system device capable of mimicking the functionality of the original, much more cumbersome and power inefficient, BioSleeve.}
+	        \item[] \emph{Designed and developed the hardware and software of a system that uses an array of EMG electrodes to monitor muscle activity in a user's arm and control robotic interfaces using simple trained gestures.}
 	    \end{innerlist}
 	\end{innerlist}
-\textbf{\href{http://caltech.edu/}{California Institute of Technology}}
-    \begin{innerlist}
-	    \item[] \href{http://www.theforce.caltech.edu/}{Guillaume Blanquart Lab, Department of Mechanical Engineering} \hfill \textbf{Richter Scholar 2011}
-	    \begin{innerlist}
-	        \item[] \emph{Studied the simulation of multiphase flow using distinct materials. Developed novel simulation methods and algorithms to obtain results that better agree with physical observations.}
-	    \end{innerlist}
-	\end{innerlist}	
 % Add a little space to nudge next ``Conference Publications'' marginpar
 % down to make room for tall ``Submitted Journal Publications''
 % marginpar. If there are enough submitted journal publications, this
@@ -343,7 +333,7 @@ Seattle, WA 98105 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
     \item \href{https://ieeexplore.ieee.org/document/8462127/}{Hwan Ko J, Fromm J, Phillipose M, Tashev I, Zarar S. Liming Numerical Precision of Neural Networks to Achieve Real-Time Voice Activity Detection. In: ICASSP, 2018.}
     \item \href{http://www.jwfromm.com/documents/paperid.pdf}{Li H, Brockmeyer E, Carter E, Fromm J, Hudson S, Patel S, Sample A. PaperID: A Technique for Drawing Functional Battery-Free Wireless Interfaces on Paper. In: CHI, 2016.}
     \item \href{http://www.jwfromm.com/documents/spirocall.pdf}{Goel M, Saba E, Stiber M, Whitmire E, Fromm J, Larson E, Borriello G, Patel S. SpiroCall: Measuring Lung Function over a Phone Call. In: CHI, 2016.}
-    \item \href{http://jwfromm.com/documents/BioSleeve_ICRA.pdf}{Wolf M, Assad C, Vernacchia M, Fromm J, Jethani H. Gesture-Based Robot Control with Variable Autonomy from the JPL BioSleeve. In: IEEE Conference on Robotics and Automation (ICRA), 2013.}.
+    \item \href{http://jwfromm.com/documents/BioSleeve_ICRA.pdf}{Wolf M, Assad C, Vernacchia M, Fromm J, Jethani H. Gesture-Based Robot Control with Variable Autonomy from the JPL BioSleeve. In: IEEE Conference on Robotics and Automation (ICRA), 2013.}
 \end{bibsection}
 
 \iffalse
