Big resume updates.

--- a/cv.tex
+++ b/cv.tex
@@ -250,16 +250,13 @@
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
 2510B NE 65th St	& \textit{Mobile:} +1-626-676-2684 \\
 Seattle, WA 98115 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: }\href{http://www.jwfromm.com}{jwfromm.com}\\
-
 \end{tabular}
 
-%\section{Objective}
-%
-%Internship with aspects pertaining to Mechanical Engineering, Robotics, CAD, or \newline Computer Science. 
-
-%\section{Citizenship}
-%
-%USA
+\section{Research Statement}
+I am a fifth year PhD Student at the University of Washington advised by Shwetak Patel in the \textbf{Ubiquitous Computing Lab}.
+My research focuses on (1) Developing \textbf{novel approximating algorithms} for neural networks,
+(2) building systems that enable \textbf{efficient execution on embedded platforms},
+and (3) exploring applications of \textbf{computer vision in resource constrained environments}.
 
 \section{Education}
 %
@@ -269,7 +266,7 @@ Seattle, WA 98115 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 \end{innerlist}
 \href{http://www.caltech.edu/}{\textbf{California Institute of Technology}}, Pasadena, CA
 \begin{innerlist}
-\item[] Bachelor of Science with Honors in Electrical Engineering \hfill \textbf{June 2014} \\ with a Minor in Computer Science.
+\item[] Bachelor of Science with Honors in Electrical Engineering \hfill \textbf{June 2014} \\ and Computer Science.
 \end{innerlist}
 
 \section{Experience}
@@ -328,14 +325,79 @@ Seattle, WA 98115 & \textit{E-mail:} \email{jwfromm@uw.edu}\\ &\textit{Website: 
 %\vspace{0.1in}
 
 \section{Conference\\Publications} \begin{bibsection}
-    \item \href{https://arxiv.org/abs/1805.10368}{Fromm J, Patel S, Phillipose M. Heterogeneous Bitwidth Binarization in Convolutional Neural Networks. In: NIPS, 2018.}
-    \item {Moreau T, Chen T, Fromm J, et al. Software-Micromanaged Hardware For Extensible Deep Learning Acceleration. In: ASPLOS 2018.}
+    \item \href{https://arxiv.org/abs/1805.10368}{Fromm J, Patel S, Phillipose M. Heterogeneous Bitwidth Binarization in Convolutional Neural Networks. In: NeurIPS, 2018.}
+    \item {Moreau T, Chen T, Fromm J, et al. YOGI: Flexible Architecture \& Runtime Co-Design for Deep Learning Specialization. In: ISCA 2018.}
     \item {Saba E, Fromm J, Jiayao C, Patel S. TB or not TB: Cough Detection and Tuberculosis Classification for Pulmonary Health Estimation. In: IMWUT, 2018.}
     \item \href{https://ieeexplore.ieee.org/document/8462127/}{Hwan Ko J, Fromm J, Phillipose M, Tashev I, Zarar S. Liming Numerical Precision of Neural Networks to Achieve Real-Time Voice Activity Detection. In: ICASSP, 2018.}
     \item \href{http://www.jwfromm.com/documents/paperid.pdf}{Li H, Brockmeyer E, Carter E, Fromm J, Hudson S, Patel S, Sample A. PaperID: A Technique for Drawing Functional Battery-Free Wireless Interfaces on Paper. In: CHI, 2016.}
+    \item \href{http://www.grosse-puppendahl.com/publications/uist2016.pdf}{Grosse-Puppendahl T et al. Exploring the Design Space for Energy-Harvesting Situated Displays. In: UIST 2016.}
     \item \href{http://www.jwfromm.com/documents/spirocall.pdf}{Goel M, Saba E, Stiber M, Whitmire E, Fromm J, Larson E, Borriello G, Patel S. SpiroCall: Measuring Lung Function over a Phone Call. In: CHI, 2016.}
     \item \href{http://jwfromm.com/documents/BioSleeve_ICRA.pdf}{Wolf M, Assad C, Vernacchia M, Fromm J, Jethani H. Gesture-Based Robot Control with Variable Autonomy from the JPL BioSleeve. In: IEEE Conference on Robotics and Automation (ICRA), 2013.}
 \end{bibsection}
+
+\section{Honors and Awards}
+    Microsoft Research Graduate Fellow \hfill \textbf{2017}\\
+    NSF Graduate Research Fellowship Honorable Mention \hfill \textbf{2016}\\
+    Google IOT Research Award Recipient \hfill \textbf{2016}\\
+    Amazon Catalyst Fellow \hfill \textbf{2016}\\
+    Qualcomm Innovation Fellowship Finalist \hfill \textbf{2015}\\
+    Caltech Bachelors of Science with Honors \hfill \textbf{2014}\\
+    Caltech Uppper Class Merit Award \hfill \textbf{2013}\\
+    Richter Scholar Fellow \hfill \textbf{2011}\\
+    Lincoln Southeast High School Valedictorian \hfill \textbf{2010}
+
+\section{Teaching Experience}
+\href{https://myplan.uw.edu/course/#/courses/TECHIN513}{\textbf{GIX TECHIN 513: Managing Data and Signal Processing}} \hfill \textbf{Instructor 2017-2019}
+    \begin{innerlist}
+    \item[] Developed and taught an introduction to practical deep learning with a data and application driven focus. The course teaches students how to create an end to end deep
+            learning system with their own data and deploy it efficiently on custom hardware or in the cloud.
+    \end{innerlist}
+
+\textbf{UW EE 478: Embedded Systems Capstone} \hfill \textbf{Instructor 2015}
+    \begin{innerlist}
+    \item[] Developed and taught a course for seneior embedded design students meant to emulate an industry experience.
+            In the course, teams of students propsed, designed, and built a custom embedded system from scratch and had
+            to deliver on predtermined milestones.
+    \end{innerlist}
+
+\textbf{UW EE 472: Embedded Microcomputer Systems} \hfill \textbf{TA 2015}
+    \begin{innerlist}
+    \item[] Redesigned the curriculum of an intro to embedded systems course to focus on creating
+            a cohesive "RoboTank" mobile robotic platform from scratch over the quarter.
+    \end{innerlist}
+
+\textbf{Caltech EE/CS 51: Embedded Systems Software Design Laboratory} \hfill \textbf{TA 2012-2014}
+    \begin{innerlist}
+    \item[] Intro to embedded systems that focuses on developing efficient firmware in assembly.
+            Primary skills developed in this course are careful planning, system design, and most importantly debugging.
+    \end{innerlist}
+
+\textbf{Caltech EE/CS 52: Embedded Systems Software Design Laboratory} \hfill \textbf{TA 2012-2014}
+    \begin{innerlist}
+    \item[] Embedded systems hardware course in which students develop a voice over IP phone from scratch using
+            both custom hardware and software (assembly).
+    \end{innerlist}
+
+\textbf{Caltech EE/CS 53: Microprocessor Project Laboratory} \hfill \textbf{TA 2013-2014}
+    \begin{innerlist}
+    \item[] Advanced embedded systems course in which students propose and develop a project of their choosing.
+    \end{innerlist}
+
+\section{References}
+\begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
+    Shwetak Patel                              & Steve Hodges \\
+    Professor and Director of the Ubicomp Lab  & Senior Researcher \\
+    Computer Science \& Electrical Engineering & Sensors and Devices Team \\
+    University of Washington                   & Microsoft Research Cambridge \\
+    shwetak@cs.washington.edu                  & steve.hodges@microsoft.com \\
+
+    \\
+    Luis Ceze                                  & Matthai Philipose \\
+    Professor and Director of the SAMPA Lab    & Senior Researcher \\
+    Computer Science                           & Mobility and Networking Group \\
+    University of Washington                   & Microsoft Research \\
+    luisceze@cs.washington.edu                 & matthaip@microsoft.com \\
+\end{tabular}
 
 \end{document}
 
